Edit project name, add author, and add repository to package.json https://docs.npmjs.com/cli/v11/configuring-npm/package-json#repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "name": "debug2url",
+  "name": "yt-addebug-url",
+  "author": {
+    "name": "rafuwu"
+  },
+  "repository": "github:rafuwu/yt-addebug-url",
   "private": true,
   "version": "0.0.0",
   "type": "module",
