--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
+    "publish": "tsc && vite build --config vite.publish.config.ts",
     "preview": "vite preview"
   },
   "devDependencies": {
